# proton-chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  chess_8c.html  chess_8h.html  chess_8h_source.html  chess_8test_8c.html  classes.html  dir_0ef3a5494e42779408fde31219d17399.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_222ba9cc8f919bbe079f1207ebd0a628.html  dir_3ad209e50ad62a2186f47f16d94cb979.html  dir_40c73bf2095fd0473b1b85ccdcac2768.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_529b4b84e849ef844923d54b90727dda.html  dir_5300cae3a1557603f8e561b18f8f3907.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6d8cef7c18d0dbfbcd2348d0c152fcfc.html  dir_72f0417feaf0f46fc36ac62f462d588a.html  dir_7784006c4a8f09858b17ef9eef995ba6.html  dir_821b768f844adf1a69f9be596209a795.html  dir_8f2980731aba7ec7b9fcae5764f196e3.html  dir_932ebad896581b417143648375d7f6fa.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a14c372d771ac6ce6521bad7e25f926e.html  dir_a640c47aba960c23b50bb8f27286af99.html  dir_b3c9c11432d3d449608a99ed796e3ce6.html  dir_d5c1087d68d49d3d48584301365c556a.html  dir_f7149612eac685b7ca79c8d1b1565990.html  evaluation_8c.html  evaluation_8test_8c.html  extensions_8h.html  extensions_8h_source.html  fen_8c.html  fen_8test_8c.html  files.html  functions.html  functions_vars.html  (+34 more)
.github/workflows/: build-and-test.yml  ci-linux-x86_64.yaml  ci-wasm.yaml  documentation.yaml
include/: base_types.h  chess.h.in  evaluation.h  extensions.h.in  movement.h  notation.h
include/extensions/: fen.h  ie.h
lib/pcmath/: CMakeLists.txt
lib/pcmath/include/: pcmath.h
lib/pcmath/src/: pcmath.c
lib/pcmath/test/: pcmath.test.c
lib/pcmem/: CMakeLists.txt
lib/pcmem/include/: pcmem.h
lib/pcstrings/: CMakeLists.txt
lib/pcstrings/include/: pcstrings.h
lib/pcstrings/src/: pcstrings.c
lib/pcstrings/test/: pcstrings.test.c
lib/scpunitc/: CMakeLists.txt
lib/scpunitc/include/: scpunitc.h
lib/scpunitc/src/include/: scpunitc.h
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  groups_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
src/: chess.c  evaluation.c  movement.c  notation.c
src/applications/: poc.c
src/extensions/: fen.c  import_export.c
src/include/: chess.h.in  extensions.h.in
test/: chess.test.c  evaluation.test.c  fen.test.c  ie.test.c  movement.test.c  test.c
test/extensions/: fen.test.c  ie.test.c
